Cargue de endPoints de cargue y consulta modulos base productos | proveedores | ordenes
